# heart_rythm_interpretation

./: .gitignore  README.md  pyproject.toml  slurm_job.sh  slurm_job_hyper.sh  slurm_man_fit.sh  tf_setup.sh
logs/results/best_model/: checkpoint  checkpoint_0.data-00000-of-00001  checkpoint_0.index  checkpoint_1.data-00000-of-00001  checkpoint_1.index  checkpoint_2.data-00000-of-00001  checkpoint_2.index  checkpoint_3.data-00000-of-00001  checkpoint_3.index  checkpoint_4.data-00000-of-00001  checkpoint_4.index  checkpoint_5.data-00000-of-00001  checkpoint_5.index  checkpoint_6.data-00000-of-00001  checkpoint_6.index  checkpoint_7.data-00000-of-00001  checkpoint_7.index  checkpoint_8.data-00000-of-00001  checkpoint_8.index  checkpoint_9.data-00000-of-00001  checkpoint_9.index  model_config.json  settings.json  train_history_dict_0  train_history_dict_1  train_history_dict_2  train_history_dict_3  train_history_dict_4  train_history_dict_5  train_history_dict_6  train_history_dict_7  train_history_dict_8  train_history_dict_9
notebooks/: data_vizualisation.ipynb  random_search.ipynb  results.ipynb  results_hyper.ipynb
report/: Abstract.tex  Discussion.tex  Introduction.tex  Main.tex  Materials and methods.tex  Results.tex  Spørsmål.tex  Theory.tex  Titlepage.tex  project_text.tex  references.bib
src/cardiac_rythm/: __main__.py  hyper_tune.py  models.py  preprocessing.py  train.py  visualize.py
src/notebooks/: data_vizualisation.ipynb  random_search.ipynb  results.ipynb  results_hyper.ipynb
tests/: test_init.py
