[project]
name = "cardiac_rythm"
version = "0.1.0"
description = ""
authors = [
    {name = "Halvor Kvamme", email = "flkz@proton.me"},
]
dependencies = [
    "tensorflow>=2.12,<2.13",
    "numpy>=1.22,<1.24",
    "pandas~=2.1.0",
    "matplotlib~=3.7.3",
    "seaborn~=0.12.2",
    "scikit-learn~=1.3.0",
    "scipy~=1.11.2",
    "ipykernel~=6.25.2",
    "jupyter~=1.0.0",
    "pydot>=1.4.2",
    "dataclasses-json>=0.6.1",
    "keras-tuner>=1.4.5",
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = ""}

[tool.pdm.dev-dependencies]
dev = [
    "bandit>=1.7.5",
    "mypy>=1.6.1",
    "ruff>=0.1.4",
]
lsp = [
    "pylsp-mypy>=0.6.7",
    "python-lsp-server>=1.9.0",
    "pylsp-rope>=0.1.11",
    "python-lsp-ruff>=1.6.0",
]


[tool.pdm.scripts]
bandit_ = "bandit --r -ll src"
mypy_ = "mypy src/"
lint.composite = ["mypy_", "bandit_"]
fmt = "ruff format src"

main = "python src/cardiac_rythm"

[tool.ruff]
line-length = 120

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
files = "src"
